feat: add repo link on several projects

--- a/html/projects/video-games/chase-tag.html
+++ b/html/projects/video-games/chase-tag.html
@@ -44,7 +44,7 @@
             <p>In october 2022 I started making a chase tag game after work. I had wanted to learn about online multiplayer for a long time and suddendly felt like it was possible with my current knowledge. It worked pretty well pretty quickly so I started talking with a friend and we created some rules to make it funny.</p>
             <p>But with other projects in the way during my vocationnal degree, the project got left behind. The idea never left though. In April 2023, after thinking about it for so long I decided to switch it directly to web instead of using Unity and then building to WebGL. The old solution was too long to test and there were huge delay between the testers.</p> 
             <p>I had already used Phaser 3 before with <a class="link-in-text" href="https://alvina-dr.com/html/projects/video-games/chloe-au-musee.html">Chloé au Musée</a> so it was the logical way to go. For the client server communication I used Socket.io. The website is deployed on Heroku (that we had already used before during my DHE with Ruby On Rails).</p>
-            <p>The project is still in progress today and if you want to have a try, there's a link on the right to the old and new version of the chase tag.</p>
+            <p>The web version is more difficult to maintain though, since it costs me money, so it's been disabled. You can still play the itch.io version on the right clicking the link.</p>
             <div class="div-row" style="width: 100%;">
                 <img src="../../../img/video-games/chase-tag/chase-tag-old.gif" style="width: 49%;">
                 <img src="../../../img/video-games/chase-tag/chase-tag-new.gif" style="width: 49%;">
@@ -56,8 +56,9 @@
                     <p class="project-window-title" id="project-id">PLAY</p>
                 </div>
                 <div class="project-window-content" style="margin-top: 40px; width: fit-content; display: flex; flex-direction: column;">
-                    <a class="external-link" href="https://chase-tag.herokuapp.com/" target="_blank">Discover the game</a>
-                    <a class="external-link" href="https://alvina-dr.itch.io/chase-tag-online" target="_blank" style="width: fit-content; margin: auto;">Old version</a>
+                    <a class="external-link" href="https://alvina-dr.itch.io/chase-tag-online" target="_blank" style="width: fit-content; margin: auto;">Unity version</a>
+                    <p style="margin: 10px;">-----------------------------</p>
+                    <a class="external-link" href="https://github.com/alvina-dr/chase-tag" target="_blank" style="width: fit-content; margin: auto;">REPOSITORY</a>
                 </div>
             </div>
             <div style="margin-top: 1rem;">
