--- a/html/projects/video-games/chloe-au-musee.html
+++ b/html/projects/video-games/chloe-au-musee.html
@@ -16,10 +16,8 @@
     <link rel="stylesheet" href="../../../css/project-window.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet"/>
+  
   </head>
   <body>
     <div class="cursor-default cursor-hidden"></div>
@@ -86,32 +84,17 @@
       </div>
 
       <div class="div-column">
-        <div
-          class="project-window2"
-          href="./html/index/jeu_video.html"
-          style="height: fit-content; margin: 0"
-        >
-          <div class="project-window-navbar">
-            <p class="project-window-title" id="project-id">PLAY</p>
-          </div>
-          <div
-            class="project-window-content"
-            style="
-              margin-top: 40px;
-              width: fit-content;
-              display: flex;
-              flex-direction: column;
-            "
-          >
-            <a
-              class="external-link"
-              href="https://chloe-au-musee.netlify.app/"
-              target="_blank"
-              >Discover the game</a
-            >
-          </div>
+        <div class="project-window2" href="./html/index/jeu_video.html" style="height: fit-content; margin: 0; margin-bottom: 10px;">
+            <div class="project-window-navbar">
+                <p class="project-window-title" id="project-id">PLAY</p>
+            </div>
+            <div class="project-window-content" style="margin-top: 40px; width: fit-content; display: flex; flex-direction: column;">
+                <a class="external-link" href="https://chloe-au-musee.netlify.app/" target="_blank" style="width: fit-content; margin: auto;">Discover the game</a>
+                <p style="margin: 10px;">-----------------------------</p>
+                <a class="external-link" href="https://github.com/alvina-dr/museum" target="_blank" style="width: fit-content; margin: auto;">REPOSITORY</a>
+            </div>
         </div>
-      </div>
+        </div>
     </section>
 
     <section class="div-row other-projects">
