--- a/html/projects/video-games/eba-effect.html
+++ b/html/projects/video-games/eba-effect.html
@@ -76,8 +76,10 @@
                 <div class="project-window-navbar">
                     <p class="project-window-title" id="project-id">PLAY</p>
                 </div>
-                <div class="project-window-content" style="margin-top: 40px; width: fit-content;">
-                    <a class="external-link" href="https://najouille.itch.io/eba-effects" target="_blank">Discover the game</a>
+                <div class="project-window-content" style="margin-top: 40px; width: fit-content; display: flex; flex-direction: column;">
+                    <a class="external-link" href="https://najouille.itch.io/eba-effects" target="_blank" style="width: fit-content; margin: auto;">Discover the game</a>
+                    <p style="margin: 10px;">-----------------------------</p>
+                    <a class="external-link" href="https://github.com/alvina-dr/eba-effect" target="_blank" style="width: fit-content; margin: auto;">REPOSITORY</a>
                 </div>
             </div>
         </div>
