--- a/html/projects/video-games/space-love-blouge.html
+++ b/html/projects/video-games/space-love-blouge.html
@@ -61,7 +61,9 @@
                     <p class="project-window-title" id="project-id">PLAY</p>
                 </div>
                 <div class="project-window-content" style="margin-top: 40px; width: fit-content; display: flex; flex-direction: column;">
-                    <a class="external-link" href="https://nonogg.itch.io/space-love-and-blouge" target="_blank">Discover the game</a>
+                    <a class="external-link" href="https://nonogg.itch.io/space-love-and-blouge" target="_blank" >Discover the game</a>
+                    <p style="margin: 10px;">-----------------------------</p>
+                    <a class="external-link" href="https://github.com/alvina-dr/space-love" target="_blank" style="width: fit-content; margin: auto;">REPOSITORY</a>
                 </div>
             </div>
             <div style="margin-top: 1rem;">
