--- a/html/about.html
+++ b/html/about.html
@@ -55,8 +55,8 @@
                             <p class="project-window-title" id="project-id">CURRICULUM</p>
                         </div>
                         <div class="project-window-content" style="margin-top: 40px; width: fit-content; display: flex; flex-direction: column;">
-                            <a class="external-link" href="../img/Alvina Damasio--Razafiarizaka - Programmeur gameplay CV.pdf" target="_blank">FRENCH VERSION</a>
-                            <a class="external-link" href="../img/Alvina Damasio--Razafiarizaka - Gameplay programmer CV.pdf" target="_blank">ENGLISH VERSION</a>
+                            <a class="external-link" href="../img/Alvina DAMASIO--RAZAFIARIZAKA - Gameplay programmer CV - FRENCH.pdf" target="_blank">FRENCH VERSION</a>
+                            <a class="external-link" href="../img/Alvina DAMASIO--RAZAFIARIZAKA - Gameplay programmer CV - ENGLISH.pdf" target="_blank">ENGLISH VERSION</a>
                         </div>
                     </div>
                 </div>
