--- a/html/projects/video-games/saudade.html
+++ b/html/projects/video-games/saudade.html
@@ -41,11 +41,28 @@
     <section id="blog-section" class="div-row">
         <div class="div-column">
             <p id="hashtags"><b>2024</b> <b>Unity</b> <b>Wwise</b></p>
-            <p>THIS PAGE IS WIP</p>
-            <p>Saudade is our <span class="text-highlight">master second year project</span>. It's still in progress as I'm writing those words, so <span class="text-highlight">everything here is work in progress</span> !</p>
-            <p>Since we are building a game that's mainly relying on a grid for it's level design, we decided that a tool for 3D grid edition would be needed. There are a few already on the asset store but you have to pay for most of them. </p>
-
+            <p><span class="text-highlight">THIS PAGE IS WIP</span> : Saudade is our <span class="text-highlight">master second year project</span>. It's still in progress as I'm writing those words, so <span class="text-highlight">everything here is work in progress</span> !</p>
+            <h3>The pitch</h3>
+            <p>Link to my <a class="link-in-text" href="https://drive.google.com/file/d/1sQOz81p_tzF_wwqsDyKOMH7eDjz9UlvM/view?usp=sharing" target="_blank" >initial pitch for the administration</a>.</p>
+            <p>"<span class="text-highlight">Every five minutes the player dies</span>. During this time, their goal is to go as far as possible in the levels, by overcoming many obstacles. The game heavily relies on its level design that allows for shortcut creation, discovery of secret passageway and customization of the environment.<br><br>
+            When they die, the player respawns in the very first level. All the paths, bridges and other shortcuts they made stay as they are, just like their knowledge of the levels. The whole path becomes much faster to cross and the player can go even farther every time the game restarts.<br><br> 
+            The end goal of the game would be to reach the last level but since this is a vertical slice, it will be to go as far as possible, within the limits of the scope established with the team."</p>
+            <div class="div-row" style="width: 100%;">
+                <div style="width: 32%;">
+                    <img src="../../../img/video-games/saudade/saudade-idea.jpg" style="width: 100%; margin-bottom: 0;"> 
+                    <p><i>Enemy weak spot</i></p>
+                </div>
+                <div style="width: 32%;">
+                    <img src="../../../img/video-games/saudade/saudade-gameplay-example.jpg" style="width: 100%; margin-bottom: 0;"> 
+                    <p><i>Dash spot</i></p>
+                </div>
+                <div style="width: 32%;">
+                    <img src="../../../img/video-games/saudade/saudade-talk-about.jpg" style="width: 100%; margin-bottom: 0;"> 
+                        <p><i>Bumper</i></p>
+                </div>
+            </div> 
             <h3>3D Grid tool</h3>
+            <p>Since we are building a game that's mainly relying on a grid for it's level design, we decided that a tool for 3D grid edition would be needed. There are a few already on the asset store but you have to pay for most of them. </p>
             <p>The main technical aspect of this project for me was designing a fitting tool for our level designer.</p>
         </div>
 
