--- a/html/projects/video-games/saudade.html
+++ b/html/projects/video-games/saudade.html
@@ -41,29 +41,39 @@
     <section id="blog-section" class="div-row">
         <div class="div-column">
             <p id="hashtags"><b>2024</b> <b>Unity</b> <b>Wwise</b></p>
-            <p><span class="text-highlight">THIS PAGE IS WIP</span> : Saudade is our <span class="text-highlight">master second year project</span>. It's still in progress as I'm writing those words, so <span class="text-highlight">everything here is work in progress</span> !</p>
+            <p><span class="text-highlight">THIS PAGE IS WIP</span> : Saudade is our <span class="text-highlight">master second year project</span>. We're still working on it as I'm writing those words, so <span class="text-highlight">everything here is work in progress</span> !</p>
             <h3>The pitch</h3>
             <p>Link to my <a class="link-in-text" href="https://drive.google.com/file/d/1sQOz81p_tzF_wwqsDyKOMH7eDjz9UlvM/view?usp=sharing" target="_blank" >initial pitch for the administration</a>.</p>
-            <p>"<span class="text-highlight">Every five minutes the player dies</span>. During this time, their goal is to go as far as possible in the levels, by overcoming many obstacles. The game heavily relies on its level design that allows for shortcut creation, discovery of secret passageway and customization of the environment.<br><br>
-            When they die, the player respawns in the very first level. All the paths, bridges and other shortcuts they made stay as they are, just like their knowledge of the levels. The whole path becomes much faster to cross and the player can go even farther every time the game restarts.<br><br> 
-            The end goal of the game would be to reach the last level but since this is a vertical slice, it will be to go as far as possible, within the limits of the scope established with the team."</p>
             <div class="div-row" style="width: 100%;">
-                <div style="width: 32%;">
-                    <img src="../../../img/video-games/saudade/saudade-idea.jpg" style="width: 100%; margin-bottom: 0;"> 
-                    <p><i>Enemy weak spot</i></p>
-                </div>
-                <div style="width: 32%;">
-                    <img src="../../../img/video-games/saudade/saudade-gameplay-example.jpg" style="width: 100%; margin-bottom: 0;"> 
-                    <p><i>Dash spot</i></p>
-                </div>
-                <div style="width: 32%;">
-                    <img src="../../../img/video-games/saudade/saudade-talk-about.jpg" style="width: 100%; margin-bottom: 0;"> 
-                        <p><i>Bumper</i></p>
-                </div>
-            </div> 
+                <img src="../../../img/video-games/saudade/saudade-idea.jpg" style="width: 100%; margin-bottom: 0;"> 
+            </div><br>
+            <div class="div-row" style="width: 100%;">
+                <img src="../../../img/video-games/saudade/saudade-gameplay-example.jpg" style="width: 100%; margin-bottom: 0;"> 
+            </div><br>
+            <p>The story of Saudade was heavily <span class="text-highlight">inspired by my grandfather's life</span>. He grew up in <span class="text-highlight">Portugal, but had to come to France at the age of 17</span>. That's also where the name of the game <span class="text-highlight">"Saudade"</span> comes from. It's a <span class="text-highlight">portuguese word that's not easily translated in french</span> but means something along the lines of : <span class="text-highlight">"Deep nostalgic longing for someone or something absent, infused with a melancholic awareness that it may never return"</span>. </p>
+            <p>This story is about having to leave your own country and miss it from afar. But it's also about <span class="text-highlight">paving your own way, tracing your path</span> - just like the player will do during the game - and <span class="text-highlight">missing home / thinking about what home is to you</span>.</p>
+
+
+            <h3>Actual game</h3>
+            <p>The team decided to <span class="text-highlight">lean into this direction</span> and actually make the <span class="text-highlight">game take place in Portugal</span>. There was a heavy research work done on the post Second World War period (during which Portugal was under a dictatorship). </p>
+            <p>So the game is actually <span class="text-highlight">about Ernestina, an old lady who returns to her childhood memories in Portugal</span>. <span class="text-highlight">Each memory is a loop that lasts a few minutes</span> during which the player will re-explore Ernestina's past and her native country. They will need to <span class="text-highlight">interact and modify the environment to make their next loop more efficient</span>. "Awaken buried moments, nostalgic emotions, and forgotten secrets to find the person you were".</p>
+            <p>Our first presentation of the project :</p>
+            <div class="div-row" style="width: 100%; height: 30rem; margin-bottom: 1rem;">
+                <iframe width="100%" height="100%" src="https://www.youtube.com/embed/DoPNI2CHltw?si=5qcWSQ_K4vzouwn2&amp;start=3317" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
+            <h3>Prototype</h3>
+            <p>For now we are at this state of the game : </p>
+            <p>VIDEO MISSING</p>
             <h3>3D Grid tool</h3>
-            <p>Since we are building a game that's mainly relying on a grid for it's level design, we decided that a tool for 3D grid edition would be needed. There are a few already on the asset store but you have to pay for most of them. </p>
-            <p>The main technical aspect of this project for me was designing a fitting tool for our level designer.</p>
+            <p>Since we are building a game that's mainly relying on a <span class="text-highlight">3D grid for it's level design</span>, we decided that a tool for 3D grid edition would be needed. There are a few already on the asset store but you have to pay for most of them. </p>
+            <p>I love making tools for the team, so this was a great occasion to make something more complete. I mainly worked with the level designer of the project.</p>
+            <p>Explanation incoming (editor window).</p>
+            <div class="div-row" style="width: 100%; height: 30rem; margin-bottom: 1rem;">
+                <iframe width="100%" height="100%" src="https://www.youtube.com/embed/eQMBsslZIps?si=fVqIO33DalenSxU3" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
+            <p>Show system that I explained in confluence (level loader + spawn).</p>
+            <h3>Save system</h3>
+            <p>Explanation incoming.</p>
         </div>
 
         <div class="div-column">
