wip: added twitter post and few explanation incoming

--- a/html/projects/video-games/saudade.html
+++ b/html/projects/video-games/saudade.html
@@ -71,9 +71,10 @@
             <div class="div-row" style="width: 100%; height: 30rem; margin-bottom: 1rem;">
                 <iframe width="100%" height="100%" src="https://www.youtube.com/embed/eQMBsslZIps?si=fVqIO33DalenSxU3" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
-            <p>Show system that I explained in confluence (level loader + spawn).</p>
+            <h3>Level system</h3>
+            <p>Explanation incoming. Level loader and spawn.</p>
             <h3>Save system</h3>
-            <p>Explanation incoming.</p>
+            <p>Explanation incoming. We have to save the player modifications to the environment.</p>
         </div>
 
         <div class="div-column">
@@ -85,7 +86,7 @@
                     <a class="external-link" href="" target="_blank">Discover the game</a>
                 </div>
             </div>
-
+            <blockquote class="twitter-tweet" data-theme="dark"><p lang="en" dir="ltr">We&#39;ve been working for a few weeks on Saudade, our 2nd year project at <a href="https://twitter.com/Cnam_Enjmin?ref_src=twsrc%5Etfw">@Cnam_Enjmin</a> !<br><br>The game relies on a time loop, similar to Minit. Below an example of what a path improvement could look like with only 10s.<br><br>I&#39;ve started writing a page on my portfolio, link in my bio :) <a href="https://t.co/WPLeQY8FoS">pic.twitter.com/WPLeQY8FoS</a></p>&mdash; Alvina (@alvina_dr_) <a href="https://twitter.com/alvina_dr_/status/1859256336397054173?ref_src=twsrc%5Etfw">November 20, 2024</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
             <div style="margin-top: 1rem;">
             </div>
         </div>
