Add : video game page rework

--- a/html/projects/video-games/protectors-of-pomelo.html
+++ b/html/projects/video-games/protectors-of-pomelo.html
@@ -62,24 +62,16 @@
         </div>
     </section>
 
-    <section class="div-row other-projects">
-        <button id='left-project-button' class="next-project-button">◄</button>
-        <div style="width: 50%; height: 100%; display: flex; justify-content: center; align-items: center;">
-            <p id="left-project" class="next-project-title">Project1</p>
-        </div>
-        <div style="width: 50%;  height: 100%; display: flex; justify-content: center; align-items: center;">
-            <p id="right-project" class="next-project-title">Project2</p>
-        </div>
-        <button id='right-project-button' class="next-project-button next-project-button-right">►</button>
-    </section>
+    <section class="div-row other-projects" id="other-projects"></section>
 
     <footer id="footer"></footer>
 
     <script src="../../../data/video-games.js"></script>
-    <script src="../../../js/next-vg.js"></script>
     <script src="../../../js/vg-template.js"></script>
     <script src="/js/mouse-cursor.js"></script>
     <script src="/js/components/navbar.js"></script>
-    <script src="/js/components/footer.js"></script></body>
+    <script src="/js/components/footer.js"></script>
+    <script src="/js/components/other-projects.js"></script>
+    <script src="/js/next-vg.js"></script>
 </body>
 </html>
