--- a/html/projects/video-games.html
+++ b/html/projects/video-games.html
@@ -46,7 +46,23 @@
     </div>
     <br />
     <section id="video-game-section" class="div-row">
-      <div class="div-grid" id="video-game-container"></div>
+      <div class="div-column" id="video-game-container" style="width: 100%;">
+
+        <template id="video-game-row">
+          <a class="div-row video-game-row object-to-filter text-zone" href="/html/projects/video-games/saudade.html">
+            <div class="vgr-image-container">
+              <img class="video-game-card-img text-zone" src="/img/video-games/saudade.jpg" id="0">
+            </div>
+            <div class="vgr-text-column div-column" style="margin-left: 20px;">
+              <h3>Saudade</h3>
+              <p>For this project we had no engine, just a library (NextAPI) given by Ubisoft that allowed us to display sprites, read inputs and play sounds in a window. This was a solo project done in a few months, only working in the evening and the weekend (all sounds and music are done by Mael Heurard though, big thanks to him).</p>
+              <div class="div-row tag-list" style="justify-content: left; margin: 0; margin-left: 10px;"><b>Unity</b> <b>Test</b> <b>Tag</b></div>
+            </div>
+          </a>
+        </template>
+
+        
+      </div>
     </section>
 
     <footer id="footer"></footer>
