Add : dumpster racoon and hold the mine pages

--- a/html/projects/video-games.html
+++ b/html/projects/video-games.html
@@ -56,7 +56,7 @@
             <div class="vgr-text-column div-column" style="margin-left: 20px;">
               <h3>Saudade</h3>
               <p>For this project we had no engine, just a library (NextAPI) given by Ubisoft that allowed us to display sprites, read inputs and play sounds in a window. This was a solo project done in a few months, only working in the evening and the weekend (all sounds and music are done by Mael Heurard though, big thanks to him).</p>
-              <div class="div-row tag-list" style="justify-content: left; margin: 0; margin-left: 10px;"><b>Unity</b> <b>Test</b> <b>Tag</b></div>
+              <div class="div-row tag-list" style="justify-content: left; margin: 0; margin-left: 10px;"></div>
             </div>
           </a>
         </template>
