--- a/html/projects/video-games/pokemon-memory.html
+++ b/html/projects/video-games/pokemon-memory.html
@@ -60,8 +60,8 @@
 
     <footer id="footer"></footer>
 
-    <script src="../../../data/video-games.js"></script>
-    <script src="../../../js/vg-template.js"></script>
+    <script src="/data/video-games.js"></script>
+    <script src="/js/vg-template.js"></script>
     <script src="/js/mouse-cursor.js"></script>
     <script src="/js/components/navbar.js"></script>
     <script src="/js/components/footer.js"></script>
